# CAPS

./: .gitignore  Cargo.toml  README.md
solutions/01/: assignment_set1.typ
solutions/02/: assignment_set2.typ
solutions/03/: assignment_set3.typ
solutions/06/: assignment_set6.typ
solutions/08/: assignment_set8.typ
solutions/10/: CMakeLists.txt  sedovAnalytical.py
solutions/10/include/: kernel.cuh  particle_loader.h  simulation.cuh
solutions/10/src/: kernel.cu  main.cu  simulation.cu  test_conservation.cu  test_neighbour_search.cu  visualize.cu
solutions/10merge/: CMakeLists.txt  main.cpp
solutions/10merge/cuda/: CMakeLists.txt  gen_springel_initial_conditions_smeared_out_energy.py  sedovAnalytical.py
solutions/10merge/opengl/shaders/: vertex.glsl
solutions/10merge/opengl/src/: glad.c  main.cpp  raymarching.cpp
solutions/10vis/: CMakeLists.txt
solutions/10vis/include/: raymarching.hpp
solutions/10vis/include/glad/: glad.h
solutions/10vis/shaders/: frag.glsl
solutions/10vis/src/: main.cpp  raymarching.cpp
src/: assignments.rs  main.rs  utils.rs
src/assignments/: assignment1.rs  assignment2.rs  assignment3.rs  assignment3_cms.rs  assignment4.rs  assignment5.rs  assignment6.rs  assignment8.rs  assignment9.rs  render_test.rs
src/utils/: plotting.rs  render.rs  render_fluid_1d.rs  vec4.rs
